syntax = "proto3";
package ws;

option go_package = "/ws";

message P_DISPLACE
{
    bytes                   old_ip                  = 1;
    bytes                   new_ip                  = 2;
    int64                   ts                      = 3;
}

//基础协议
enum P_BASE
{
    none                    = 0;                           //保留字段
    s2c_err_displace        = 2147483647;                  //被顶号
}

